--- a/cse/sem1.html
+++ b/cse/sem1.html
@@ -88,7 +88,8 @@
                                 href="./materials/sem1 notes/HS3151 Professional-English-I 01- By www.LearnEngineering.in.pdf">Material</a>
                         </li>
                         <li><a href="">University Question</a></li>
-                        <li><a href="">Important Question</a></li>
+                        <li><a href="./materials/sem 1 IQ/Professional English I - HS3151 2021 Regulation - Important Questions - topics-2-7.pdf">Important Question</a></li>
+                        <li><a href="./sem1 iq.html">Reference video</a></li>
 
                     </ol>
                 </td>
@@ -104,8 +105,8 @@
                                 href="./materials/sem1 notes/MA3151 - Matrices and Calculas/MA3151 - Matrices and Calculas (Handwritten Notes).pdf">Material</a>
                         </li>
                         <li><a href="">University Question</a></li>
-                        <li><a href="">Important Question</a></li>
-
+                        <li><a href="./materials/sem 1 IQ/Matrices and Calculus - MA3151 2021 Regulation - Important Questions-2-6.pdf">Important Question</a></li>
+                        <li><a href="./sem1 iq.html">Reference video</a></li>
                     </ol>
                 </td>
             </tr>
@@ -120,7 +121,8 @@
                                 href="./materials/sem1 notes/PH3151 - Engineering Physics/PH3151 - Engineering Physics (Handwritten Notes).pdf">Material</a>
                         </li>
                         <li><a href="">University Question</a></li>
-                        <li><a href="">Important Question</a></li>
+                        <li><a href="./materials/sem 1 IQ/Engineering Physics - PH3151 2021 Regulation - Important Questions-2-6.pdf">Important Question</a></li>
+                        <li><a href="./sem1 iq.html">Reference video</a></li>
 
                     </ol>
                 </td>
@@ -136,7 +138,8 @@
                                 href="./materials/sem1 notes/CY3151 - Engineering Chemistry/CY3151 - Engineering Chemistry (Full Notes).pdf">Material</a>
                         </li>
                         <li><a href="">University Question</a></li>
-                        <li><a href="">Important Question</a></li>
+                        <li><a href="./materials/sem 1 IQ/Engineering Chemistry - CY3151 - Important 2 and 16 Marks Question Bank with Answers-2-34.pdf">Important Question</a></li>
+                        <li><a href="./sem1 iq.html">Reference video</a></li>
 
                     </ol>
                 </td>
@@ -153,7 +156,8 @@
                                 href="./materials/sem1 notes/GE3151 - Problem Solving and Python Programming/">Material</a>
                         </li>
                         <li><a href="">University Question</a></li>
-                        <li><a href="">Important Question</a></li>
+                        <li><a href="./materials/sem 1 IQ/Problem Solving and Python Programming - GE3151 2021 Regulation - Important Questions-2-3.pdf">Important Question</a></li>
+                        <li><a href="./sem1 iq.html">Reference video</a></li>
                     </ol>
                 </td>
             </tr>
@@ -167,7 +171,8 @@
                         <li><a href="./materials/sem1 notes/தமிழர் மரபு 01- By www.LearnEngineering.in.pdf">Material</a>
                         </li>
                         <li><a href="">University Question</a></li>
-                        <li><a href="">Important Question</a></li>
+                        <li><a href="./materials/sem 1 IQ/tamil iQ.png">Important Question</a></li>
+                        <li><a href="./sem1 iq.html">Reference video</a></li>
 
                     </ol>
                 </td>
