--- a/cse/cse.html
+++ b/cse/cse.html
@@ -126,7 +126,7 @@
                 <a href="./sem5.html"><button><span>Sem 5</span></button></a>
             </div>
             <div class="sem">
-                <a href=""><button><span>Sem 6</span></button></a>
+                <a href="./sem6.html"><button><span>Sem 6</span></button></a>
             </div>
         </div>
         <div class="row">
