--- a/cse/sem2.html
+++ b/cse/sem2.html
@@ -91,7 +91,7 @@
                         </li>
                         <li><a href="./materials/sem2 QP/QP-HS3251-Professional English - II.pdf">University
                                 Question</a></li>
-                        <li><a href="">Important Question</a></li>
+                        <li><a href="./materials/sem 2 IQ/Professional English II - HS3252 2021 Regulation - Important Questions-2-3.pdf">Important Question</a></li>
 
                     </ol>
                 </td>
@@ -107,7 +107,7 @@
                         </li>
                         <li><a href="./materials/sem2 QP/QP-MA3251-Statistics and Numerical Methods.pdf">University
                                 Question</a></li>
-                        <li><a href="">Important Question</a></li>
+                        <li><a href="./materials/sem 2 IQ/Statistics and Numerical Methods - MA3251 - Important Questions and Question Bank-3-37.pdf">Important Question</a></li>
 
                     </ol>
                 </td>
@@ -123,7 +123,7 @@
                         </li>
                         <li><a href="./materials/sem2 QP/QP-PH3256-Physics for Information Science.pdf">University
                                 Question</a></li>
-                        <li><a href="">Important Question</a></li>
+                        <li><a href="./materials/sem 2 IQ/Physics for Information Science - PH3256 2021 Regulation - Important Questions 2-2-3.pdf">Important Question</a></li>
 
                     </ol>
                 </td>
@@ -141,7 +141,7 @@
                         </li>
                         <li><a href="./materials/sem2 QP/QP-BE3251-Basic Electrical and Electronics.pdf">University
                                 Question</a></li>
-                        <li><a href="">Important Question</a></li>
+                        <li><a href="./materials/sem 2 IQ/Basic Electrical and Electronics Engineering - BE3251 2021 Regulation - Important Questions - Topics-2.pdf">Important Question</a></li>
 
                     </ol>
                 </td>
@@ -156,7 +156,7 @@
                         <li><a href="./materials/sem2 notes/GE3251-Engineering Graphics.pdf">Material</a></li>
                         <li><a href="./materials/sem2 QP/QP-GE3251-Engineering Graphics.pdf">University Question</a>
                         </li>
-                        <li><a href="">Important Question</a></li>
+                        <li><a href="./materials/sem 2 IQ/Engineering Graphics - GE3251 2021 Regulation - Important Questions.pdf">Important Question</a></li>
 
                     </ol>
                 </td>
@@ -170,7 +170,7 @@
                         <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                         <li><a href="./materials/sem2 notes/CS3251-Programming in C.pdf">Material</a></li>
                         <li><a href="./materials/sem2 QP/QP-CS3251-Programming in C.pdf">University Question</a></li>
-                        <li><a href="">Important Question</a></li>
+                        <li><a href="./materials/sem 2 IQ/Programming in C - CS3251 2021 Regulation - Important Questions 1.pdf">Important Question</a></li>
 
                     </ol>
                 </td>
