--- a/cse/sem3.html
+++ b/cse/sem3.html
@@ -81,7 +81,7 @@
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                     <li><a href="./materials/sem3 notes/MA3354 - Discrete Mathematics/MA3354 - Discrete Mathematics (Handwritten Notes).pdf">Material</a></li>
                     <li><a href="./materials/sem3 QP/QP-MA3354-Discrete Mathematics.pdf">University Question</a></li>
-                    <li><a href="">Important Question</a></li>
+                    <li><a href="./materials/sem 3 IQ/Discrete Mathematics - MA3354 - Important Questions.pdf">Important Question</a></li>
 
                 </ol>
             </td>
@@ -96,7 +96,7 @@
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                     <li><a href="./materials/sem3 notes/CS3351 - Digital Principles and Computer Organization/CS3351 - Digital Principles andComputer Organization (Full Notes).pdf">Material</a></li>
                     <li><a href="">University Question</a></li>
-                    <li><a href="">Important Question</a></li>
+                    <li><a href="./materials/sem 3 IQ/Digital Principles and Computer Organization - CS3351 2021 Regulation - 2 marks and Important Questions-3-18.pdf">Important Question</a></li>
 
                 </ol>
             </td>
@@ -111,7 +111,7 @@
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                     <li><a href="./materials/sem3 notes/CS3352 - Foundations of Data ﻿ Science/CS3352 - Foundations of Data Science (Full Notes).pdf">Material</a></li>
                     <li><a href="">University Question</a></li>
-                    <li><a href="">Important Question</a></li>
+                    <li><a href="./materials/sem 3 IQ/Foundation of Data Science - CS3352 - Question Bank and Important 2 Marks Questions with Answer-4-25.pdf">Important Question</a></li>
 
                 </ol>
             </td>
@@ -125,7 +125,7 @@
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                     <li><a href="./materials/sem3 notes/CS3301 - Data Structures/CS3301 - Data Structures (Handwritten Notes).pdf">Material</a></li>
                     <li><a href="./materials/sem3 QP/QP-CS3301-Data Structures.pdf">University Question</a></li>
-                    <li><a href="">Important Question</a></li>
+                    <li><a href="./materials/sem 3 IQ/Data Structures - CS3301 2021 Regulation - Important Questions-3-4.pdf">Important Question</a></li>
 
                 </ol>
             </td>
@@ -140,7 +140,7 @@
                         <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                         <li><a href="./materials/sem3 notes/CS3391 - Object Oriented ﻿ Programming/CS3391 - Object Oriented Programming (Full Notes).pdf" >Material</a></li>
                         <li><a href="">University Question</a></li>
-                        <li><a href="">Important Question</a></li>
+                        <li><a href="./materials/sem 3 IQ/Object Oriented Programming - CS3391 2021 Regulation - Important Questions-1-2.pdf">Important Question</a></li>
                     </ol>
                 </td>
         </tr>
