--- a/cse/sem4.html
+++ b/cse/sem4.html
@@ -80,7 +80,7 @@
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                     <li><a href="./materials/sem4 notes/CS3452 - Theory of Computation/CS3452 - Theory of Computation (Full Notes).pdf">Material</a></li>
                     <li><a href="./materials/sem4 QP/QP-CS3452-Theory of Computation.pdf">University Question</a></li>
-                    <li><a href="">Important Question</a></li>
+                    <li><a href="./materials/sem4 IQ/Theory of Computation - CS3452 - Question Bank and Important Questions-3-15.pdf">Important Question</a></li>
                   
                 </ol>
             </td>
@@ -95,7 +95,7 @@
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                     <li><a href="./materials/sem4 notes/CS3491 ARTIFICIAL INTELLIGENCE AND MACHINE LEARNING 02- By www.LearnEngineering.in.pdf">Material</a></li>
                     <li><a href="">University Question</a></li>
-                    <li><a href="">Important Question</a></li>
+                    <li><a href="./materials/sem4 IQ/Artificial Intelligence and Machine Learning - CS3491 2021 Regulation - 2 marks and Important Questions-3-25.pdf">Important Question</a></li>
 
                 </ol>
             </td>
@@ -110,7 +110,7 @@
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                     <li><a href="./materials/sem4 notes/CS3492 Database Management Systems Lecture Notes 1.pdf">Material</a></li>
                     <li><a href="./materials/sem4 QP/QP-CS3452-Theory of Computation.pdf">University Question</a></li>
-                    <li><a href="">Important Question</a></li>
+                    <li><a href="./materials/sem4 IQ/Database Management Systems - CS3492 2021 Regulation - Important Questions-3-13.pdf">Important Question</a></li>
 
                 </ol>
             </td>
@@ -124,7 +124,7 @@
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                     <li><a href="./materials/sem4 notes/CS3401 - Algorithms/CS3401 - Algorithms (Full Notes).pdf">Material</a></li>
                     <li><a href="">University Question</a></li>
-                    <li><a href="">Important Question</a></li>
+                    <li><a href="./materials/sem4 IQ/Algorithms - CS3401 2021 Regulation - 2 marks and Important Questions-3-52.pdf">Important Question</a></li>
 
                 </ol>
             </td>
@@ -139,7 +139,7 @@
                         <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                         <li><a href="./materials/sem4 notes/CS3451 Introduction to Operating Systems Lecture Notes 01.pdf" >Material</a></li>
                         <li><a href="">University Question</a></li>
-                        <li><a href="">Important Question</a></li>
+                        <li><a href="./materials/sem4 IQ/Introduction to Operating Systems - CS3451 - Question Bank and Important 2 Marks Questions with Answer-3-108.pdf">Important Question</a></li>
                     </ol>
                 </td>
         </tr>
@@ -153,7 +153,7 @@
                         <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                         <li><a href="./materials/sem4 notes/EVS 01- By www.notesfree.in.pdf" >Material</a></li>
                         <li><a href="">University Question</a></li>
-                        <li><a href="">Important Question</a></li>
+                        <li><a href="./materials/sem4 IQ/Environmental Sciences and Sustainability - GE3451 - Question Bank and Important Questions-2-9.pdf">Important Question</a></li>
                     </ol>
                 </td>
         </tr>
