--- a/cse/sem1 iq.html
+++ b/cse/sem1 iq.html
@@ -29,6 +29,7 @@
         display: flex;
         justify-content: space-between;
         padding: 20px;
+        flex-wrap: wrap;
     }
 
     .row1,
