--- a/cse/sem5.html
+++ b/cse/sem5.html
@@ -84,7 +84,7 @@
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                     <li><a href="./materials/sem5 notes/CS3591- Computer Networks.pdf">Material</a></li>
                     <li><a href="">University Question</a></li>
-                    <li><a href="">Important Question</a></li>
+                    <li><a href="./materials/sem5 IQ/Computer Networks - CS3591 - Question Bank and Important 2 Marks Questions with Answer-3-31.pdf">Important Question</a></li>
 
                 </ol>
             </td>
@@ -98,7 +98,7 @@
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                     <li><a href="./materials/sem5 notes/CS3501 - Compiler Design.pdf">Material</a></li>
                     <li><a href="">University Question</a></li>
-                    <li><a href="">Important Question</a></li>
+                    <li><a href="./materials/sem5 IQ/Compiler Design - CS3501 - Important Questions.pdf">Important Question</a></li>
 
                 </ol>
             </td>
@@ -113,7 +113,7 @@
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                     <li><a href="./materials/sem5 notes/CB3491 - Cryptography and Cyber Security.pdf">Material</a></li>
                     <li><a href="">University Question</a></li>
-                    <li><a href="">Important Question</a></li>
+                    <li><a href="./materials/sem5 IQ/Cryptography and Cyber Security - CB3491 - Important Questions-3-4.pdf">Important Question</a></li>
 
                 </ol>
             </td>
@@ -127,7 +127,7 @@
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                     <li><a href="./materials/sem5 notes/CS3351-Distriduted Computing.pdf">Material</a></li>
                     <li><a href="">University Question</a></li>
-                    <li><a href="">Important Question</a></li>
+                    <li><a href="./materials/sem5 IQ/Distributed Computing - CS3551 - Question Bank and Important Questions with Answer-4-218.pdf">Important Question</a></li>
 
                 </ol>
             </td>
