--- a/cse/sem6.html
+++ b/cse/sem6.html
@@ -77,12 +77,12 @@
             <th>Nodes/Question paper </th>
         </tr>
         <tr>
-            <td style="font-size: 20px;"> CS3591 </td>
-            <td style="font-size: 20px;"> Computer Networks </td>
+            <td style="font-size: 20px;"> CCS362  </td>
+            <td style="font-size: 20px;">  Security and Privacy in Cloud</td>
             <td>
                 <ol type="1">
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
-                    <li><a href="./materials/sem5 notes/CS3591- Computer Networks.pdf">Material</a></li>
+                    <li><a href="">Material</a></li>
                     <li><a href="">University Question</a></li>
                     <li><a href="">Important Question</a></li>
 
@@ -90,13 +90,13 @@
             </td>
         </tr>
         <tr>
-            <td style="font-size: 20px;"> CS3501 </td>
-            <td style="font-size: 20px;">Compiler Design </td>
+            <td style="font-size: 20px;"> CCS354  </td>
+            <td style="font-size: 20px;"> Network Security</td>
             <td>
 
                 <ol type="1">
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
-                    <li><a href="./materials/sem5 notes/CS3501 - Compiler Design.pdf">Material</a></li>
+                    <li><a href="./materials/sem6 notes/CCS354-NETWORK SECURITY-317734166-network-security-unit-1.pdf">Material</a></li>
                     <li><a href="">University Question</a></li>
                     <li><a href="">Important Question</a></li>
 
@@ -104,14 +104,13 @@
             </td>
         </tr>
         <tr>
-            <td style="font-size: 20px;"> CB3491 </td>
-            <td style="font-size: 20px;"> Cryptography and Cyber
-                Security </td>
+            <td style="font-size: 20px;">CCS341   </td>
+            <td style="font-size: 20px;"> Data Warehousing </td>
             <td>
 
                 <ol type="1">
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
-                    <li><a href="./materials/sem5 notes/CB3491 - Cryptography and Cyber Security.pdf">Material</a></li>
+                    <li><a href="">Material</a></li>
                     <li><a href="">University Question</a></li>
                     <li><a href="">Important Question</a></li>
 
@@ -119,13 +118,13 @@
             </td>
         </tr>
         <tr>
-            <td style="font-size: 20px;"> CS3551 </td>
-            <td style="font-size: 20px;">Distributed Computing </td>
+            <td style="font-size: 20px;"> CCS356 </td>
+            <td style="font-size: 20px;">Object Oriented Software Engineering </td>
             <td>
 
                 <ol type="1">
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
-                    <li><a href="./materials/sem5 notes/CS3351-Distriduted Computing.pdf">Material</a></li>
+                    <li><a href="">Material</a></li>
                     <li><a href="">University Question</a></li>
                     <li><a href="">Important Question</a></li>
 
@@ -133,13 +132,13 @@
             </td>
         </tr>
         <tr>
-            <td style="font-size: 20px;">CCS335 </td>
-            <td style="font-size: 20px;">Cloud Computing</td>
+            <td style="font-size: 20px;">CS3691  </td>
+            <td style="font-size: 20px;"> Embedded Systems and IOT</td>
             <td>
 
                 <ol type="1">
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
-                    <li><a href="./materials/sem5 notes/cloud computing  (1).pdf">Material</a>
+                    <li><a href="./materials/sem6 notes/CS3691 Embedded Systems and IoT watermark-1-99.pdf">Material</a>
                     </li>
                     <li><a href="">University Question</a></li>
                     <li><a href="">Important Question</a></li>
@@ -147,8 +146,21 @@
             </td>
         </tr>
         <tr>
-            <td style="font-size: 20px;">CCS360 </td>
-            <td style="font-size: 20px;">Recommender System</td>
+            <td style="font-size: 20px;">CCW332 </td>
+            <td style="font-size: 20px;"> Digital Marketing</td>
+            <td>
+
+                <ol type="1">
+                    <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
+                    <li><a href="./materials/sem6 notes/CCW332-DIGITAL MARKETING-1233372698-DM NOTES 3UNITS UPDATED.pdf">Material</a></li>
+                    <li><a href="">University Question</a></li>
+                    <li><a href="">Important Question</a></li>
+                </ol>
+            </td>
+        </tr>
+        <tr>
+            <td style="font-size: 20px;">MX3089 </td>
+            <td style="font-size: 20px;"> Industrial Safety</td>
             <td>
 
                 <ol type="1">
