--- a/cse/sem1.html
+++ b/cse/sem1.html
@@ -87,7 +87,7 @@
                         <li><a
                                 href="./materials/sem1 notes/HS3151 Professional-English-I 01- By www.LearnEngineering.in.pdf">Material</a>
                         </li>
-                        <li><a href="">University Question</a></li>
+                        <li><a href="./materials/sem1 QP/HS3151-Professional-English-I.pdf">University Question</a></li>
                         <li><a href="">Important Question</a></li>
 
                     </ol>
@@ -103,7 +103,7 @@
                         <li><a
                                 href="./materials/sem1 notes/MA3151 - Matrices and Calculas/MA3151 - Matrices and Calculas (Handwritten Notes).pdf">Material</a>
                         </li>
-                        <li><a href="">University Question</a></li>
+                        <li><a href="./materials/sem1 QP/MA3151-Martices-and-Calculus.pdf">University Question</a></li>
                         <li><a href="">Important Question</a></li>
 
                     </ol>
@@ -119,7 +119,7 @@
                         <li><a
                                 href="./materials/sem1 notes/PH3151 - Engineering Physics/PH3151 - Engineering Physics (Handwritten Notes).pdf">Material</a>
                         </li>
-                        <li><a href="">University Question</a></li>
+                        <li><a href="./materials/sem1 QP/PH3151-Engineering-Physics.pdf">University Question</a></li>
                         <li><a href="">Important Question</a></li>
 
                     </ol>
@@ -135,7 +135,7 @@
                         <li><a
                                 href="./materials/sem1 notes/CY3151 - Engineering Chemistry/CY3151 - Engineering Chemistry (Full Notes).pdf">Material</a>
                         </li>
-                        <li><a href="">University Question</a></li>
+                        <li><a href="./materials/sem1 QP/CY3151-Engineering-Chemistry.pdf">University Question</a></li>
                         <li><a href="">Important Question</a></li>
 
                     </ol>
@@ -152,7 +152,7 @@
                         <li><a
                                 href="./materials/sem1 notes/GE3151 - Problem Solving and Python Programming/">Material</a>
                         </li>
-                        <li><a href="">University Question</a></li>
+                        <li><a href="./materials/sem1 QP/GE3151-Problem-Solving-and-Python-Programming.pdf">University Question</a></li>
                         <li><a href="">Important Question</a></li>
                     </ol>
                 </td>
@@ -166,7 +166,7 @@
                         <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                         <li><a href="./materials/sem1 notes/தமிழர் மரபு 01- By www.LearnEngineering.in.pdf">Material</a>
                         </li>
-                        <li><a href="">University Question</a></li>
+                        <li><a href="./materials/sem1 QP/GE3152-Heritage-of-Tamils.pdf">University Question</a></li>
                         <li><a href="">Important Question</a></li>
 
                     </ol>
