--- a/cse/sem2.html
+++ b/cse/sem2.html
@@ -146,22 +146,7 @@
                     </ol>
                 </td>
             </tr>
-            <tr>
-                <td style="font-size: 20px;">GE3151</td>
-                <td style="font-size: 20px;"> Problem Solving and Python
-                    Programming </td>
-                <td>
-
-                    <ol type="1">
-                        <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
-                        <li><a
-                                href="./materials/sem1 notes/GE3151 - Problem Solving and Python Programming/">Material</a>
-                        </li>
-                        <li><a href="">University Question</a></li>
-                        <li><a href="">Important Question</a></li>
-                    </ol>
-                </td>
-            </tr>
+            
             <tr>
                 <td style="font-size: 20px;">GE3251 </td>
                 <td style="font-size: 20px;">Engineering Graphics </td>
@@ -200,7 +185,7 @@
                     <ol type="1">
                         <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                         <li><a href="./materials/sem2 notes/GE3252- Tamils and Technology.pdf">Material</a></li>
-                        <li><a href="">University Question</a></li>
+                        <li><a href="./materials/sem2 QP/GE3252-Tamils-and-Technology.pdf">University Question</a></li>
                         <li><a href="">Important Question</a></li>
 
                     </ol>
