--- a/cse/sem4.html
+++ b/cse/sem4.html
@@ -94,7 +94,7 @@
                 <ol type="1">
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                     <li><a href="./materials/sem4 notes/CS3491 ARTIFICIAL INTELLIGENCE AND MACHINE LEARNING 02- By www.LearnEngineering.in.pdf">Material</a></li>
-                    <li><a href="">University Question</a></li>
+                    <li><a href="./materials/sem4 QP/QP-CS3491-Artificial-Intelligence-and-Machine-Learning-Nov-Dec-2023.pdf">University Question</a></li>
                     <li><a href="">Important Question</a></li>
 
                 </ol>
@@ -109,7 +109,7 @@
                 <ol type="1">
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                     <li><a href="./materials/sem4 notes/CS3492 Database Management Systems Lecture Notes 1.pdf">Material</a></li>
-                    <li><a href="./materials/sem4 QP/QP-CS3452-Theory of Computation.pdf">University Question</a></li>
+                    <li><a href="./materials/sem4 QP/QP-CS3492-Database Management Systems.pdf">University Question</a></li>
                     <li><a href="">Important Question</a></li>
 
                 </ol>
@@ -123,7 +123,7 @@
                 <ol type="1">
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                     <li><a href="./materials/sem4 notes/CS3401 - Algorithms/CS3401 - Algorithms (Full Notes).pdf">Material</a></li>
-                    <li><a href="">University Question</a></li>
+                    <li><a href="./materials/sem4 QP/QP-CS3401-Algorithms-Apr-May-2024.pdf">University Question</a></li>
                     <li><a href="">Important Question</a></li>
 
                 </ol>
@@ -138,7 +138,7 @@
                     <ol type="1">
                         <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                         <li><a href="./materials/sem4 notes/CS3451 Introduction to Operating Systems Lecture Notes 01.pdf" >Material</a></li>
-                        <li><a href="">University Question</a></li>
+                        <li><a href="./materials/sem4 QP/QP-CS3451-Introduction-to-Operating-Systems-Apr-May-2024.pdf">University Question</a></li>
                         <li><a href="">Important Question</a></li>
                     </ol>
                 </td>
@@ -152,7 +152,7 @@
                     <ol type="1">
                         <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                         <li><a href="./materials/sem4 notes/EVS 01- By www.notesfree.in.pdf" >Material</a></li>
-                        <li><a href="">University Question</a></li>
+                        <li><a href="./materials/sem4 QP/QP-GE3451-Environmental-Sciences-and-Sustainability-Nov-Dec-2023.pdf">University Question</a></li>
                         <li><a href="">Important Question</a></li>
                     </ol>
                 </td>
