--- a/cse/sem3.html
+++ b/cse/sem3.html
@@ -95,7 +95,7 @@
                 <ol type="1">
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                     <li><a href="./materials/sem3 notes/CS3351 - Digital Principles and Computer Organization/CS3351 - Digital Principles andComputer Organization (Full Notes).pdf">Material</a></li>
-                    <li><a href="">University Question</a></li>
+                    <li><a href="./materials/sem3 QP/QP-CS3351-Digital-Principles-and-Computer-Organization-Apr-May-2024.pdf">University Question</a></li>
                     <li><a href="">Important Question</a></li>
 
                 </ol>
@@ -110,7 +110,7 @@
                 <ol type="1">
                     <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                     <li><a href="./materials/sem3 notes/CS3352 - Foundations of Data ﻿ Science/CS3352 - Foundations of Data Science (Full Notes).pdf">Material</a></li>
-                    <li><a href="">University Question</a></li>
+                    <li><a href="./materials/sem3 QP/QP-CS3352-Foundations-of-Data-Science-Apr-May-2024.pdf">University Question</a></li>
                     <li><a href="">Important Question</a></li>
 
                 </ol>
@@ -139,7 +139,7 @@
                     <ol type="1">
                         <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                         <li><a href="./materials/sem3 notes/CS3391 - Object Oriented ﻿ Programming/CS3391 - Object Oriented Programming (Full Notes).pdf" >Material</a></li>
-                        <li><a href="">University Question</a></li>
+                        <li><a href="./materials/sem3 QP/QP-CS3391-Object-Oriented-Programming-Nov-Dec-2023.pdf">University Question</a></li>
                         <li><a href="">Important Question</a></li>
                     </ol>
                 </td>
