--- a/cse/cse.html
+++ b/cse/cse.html
@@ -131,10 +131,10 @@
         </div>
         <div class="row">
             <div class="sem">
-                <a href=""><button><span>Sem 7</span></button></a>
+                <a href="./sem7.html"><button><span>Sem 7</span></button></a>
             </div>
             <div class="sem">
-                <a href=""><button><span>Sem 8</span></button></a>
+                <a href="./sem8.html"><button><span>Sem 8</span></button></a>
             </div>
         </div>
     </div>
