--- a/cse/sem7.html
+++ b/cse/sem7.html
@@ -83,7 +83,7 @@
                 <td>
                     <ol type="1">
                         <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
-                        <li><a href="">Material</a></li>
+                        <li><a href="./materials/sem7 notes/">Material</a></li>
                         <li><a href="">University Question</a></li>
                         <li><a href="">Important Question</a></li>
 
@@ -97,7 +97,7 @@
 
                     <ol type="1">
                         <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
-                        <li><a href="">Material</a></li>
+                        <li><a href="./materials/sem7 notes/Human Values and Ethics.pdf">Material</a></li>
                         <li><a href="">University Question</a></li>
                         <li><a href="">Important Question</a></li>
 
@@ -111,7 +111,7 @@
 
                     <ol type="1">
                         <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
-                        <li><a href="">Material</a></li>
+                        <li><a href="./materials/sem7 notes/STUDENT - DRINKING WATER SUPPLY AND TREATMENT - 18.07.2024-1.pdf">Material</a></li>
                         <li><a href="">University Question</a></li>
                         <li><a href="">Important Question</a></li>
 
@@ -125,7 +125,7 @@
 
                     <ol type="1">
                         <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
-                        <li><a href="">Material</a></li>
+                        <li><a href="./materials/sem7 notes/MG8591+-+Principles+of+Management+(Ripped+from+Amazon+Kindle+eBooks+by+Sai+Seena).pdf">Material</a></li>
                         <li><a href="">University Question</a></li>
                         <li><a href="">Important Question</a></li>
 
