--- a/aids/aids.html
+++ b/aids/aids.html
@@ -49,6 +49,7 @@
             background-color: #3e58ca;
             color: white;
             border-color: white;
+            box-shadow: 2px 2px 30px 10px  #fccdef;
         }
 
         /* nav */
