--- a/cse/sem8.html
+++ b/cse/sem8.html
@@ -81,13 +81,10 @@
             <td style="font-size: 20px;"> CS3811  </td>
             <td style="font-size: 20px;"> Project Work</td>
             <td>
-                <ol type="1">
-                    <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
-                    <li><a href="">Material</a></li>
-                    <li><a href="">University Question</a></li>
-                    <li><a href="">Important Question</a></li>
-
-                </ol>
+                <ul type="none">
+                    <li>-----</li>
+                   
+                </ul>
             </td>
         </tr>
        
