--- a/cse/sem7.html
+++ b/cse/sem7.html
@@ -99,7 +99,7 @@
                         <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                         <li><a href="./materials/sem7 notes/Human Values and Ethics.pdf">Material</a></li>
                         <li><a href="">University Question</a></li>
-                        <li><a href="">Important Question</a></li>
+                        <li><a href="./materials/sem7 IQ/Human Values and Ethics - GE3791 - 2 Marks Questions Answer and Important Questions-2-7.pdf">Important Question</a></li>
 
                     </ol>
                 </td>
@@ -113,7 +113,7 @@
                         <li><a href="./materials/STUCOR_R21_SYLLABUS_CSE.pdf">Syllabus</a></li>
                         <li><a href="./materials/sem7 notes/STUDENT - DRINKING WATER SUPPLY AND TREATMENT - 18.07.2024-1.pdf">Material</a></li>
                         <li><a href="">University Question</a></li>
-                        <li><a href="">Important Question</a></li>
+                        <li><a href="./materials/sem7 IQ/CIVIL 5th Semester - Drinking Water Supply and Treatment - OEN351 - Important Questions with Answer-3-13.pdf">Important Question</a></li>
 
                     </ol>
                 </td>
